chore(renovate): automerge regex dependencies

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -17,7 +17,7 @@
   "packageRules": [
     {
       "automerge": true,
-      "matchManagers": ["woodpecker", "devcontainer"]
+      "matchFileNames": [".woodpecker/*", ".devcontainer/*"]
     },
     {
       "automerge": true,
