--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     networks:
       cloudflared_default:
         aliases:
-          - nextcloud
+          - nextcloud_caddy
       default: {}
     read_only: true
     restart: always
@@ -65,51 +65,7 @@ services:
       - data:/volumes/data
       - redis:/volumes/redis
 
-  nextcloud_cron:
-    cap_drop:
-      - ALL
-    depends_on:
-      nextcloud_server:
-        condition: service_started
-    entrypoint:
-      - sh
-      - -c
-      - while true ; do php -f /var/www/html/cron.php && sleep 300 ; done
-    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:d741e4a076656fe4fd9aced80605548a180ccc2e5e12e1dfe8b978ca494436c6
-    networks:
-      - default
-    read_only: true
-    restart: always
-    security_opt:
-      - no-new-privileges:true
-    tmpfs:
-      - /tmp:uid=82,gid=82
-    user: 82:82
-    volumes:
-      - data:/var/www/html/data
-      - nextcloud:/var/www/html
-
-  nextcloud_notify_push:
-    cap_drop:
-      - ALL
-    depends_on:
-      nextcloud_server:
-        condition: service_started
-    entrypoint:
-      - /var/www/html/custom_apps/notify_push/bin/x86_64/notify_push
-      - /var/www/html/config/config.php
-    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:d741e4a076656fe4fd9aced80605548a180ccc2e5e12e1dfe8b978ca494436c6
-    networks:
-      - default
-    read_only: true
-    restart: always
-    security_opt:
-      - no-new-privileges:true
-    user: 82:82
-    volumes:
-      - nextcloud:/var/www/html
-
-  nextcloud_server:
+  nextcloud:
     cap_drop:
       - ALL
     depends_on:
@@ -139,6 +95,29 @@ services:
     volumes:
       - data:/var/www/html/data
       - nextcloud:/var/www/html
+
+  nextcloud_cron:
+    depends_on:
+      nextcloud:
+        condition: service_started
+    entrypoint:
+      - sh
+      - -c
+      - while true ; do php -f /var/www/html/cron.php && sleep 300 ; done
+    extends:
+      service: nextcloud
+
+  # The first time nextcloud runs, it's normal that this service fails. Ensure
+  # to install the notify push app inside nextcloud to make this work.
+  nextcloud_notify_push:
+    depends_on:
+      nextcloud:
+        condition: service_started
+    entrypoint:
+      - /var/www/html/custom_apps/notify_push/bin/x86_64/notify_push
+      - /var/www/html/config/config.php
+    extends:
+      service: nextcloud
 
   postgres:
     cap_drop:
