--- a/svc/vaultwarden/docker-compose.yml
+++ b/svc/vaultwarden/docker-compose.yml
@@ -1,5 +1,3 @@
-# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
-
 # SETUP:
 #
 # Create a .env file with:
@@ -34,6 +32,13 @@ services:
       SMTP_PORT: 465
       SMTP_SECURITY: force_tls
       TRASH_AUTO_DELETE_DAYS: 60
+    healthcheck:
+      interval: 10s
+      retries: 5
+      test:
+        - CMD
+        - /healthcheck.sh
+      timeout: 5s
     image: quay.io/vaultwarden/server:1.32.3-alpine@sha256:14d02649c1ed978911103894dd0863ce16a53a671aa5900d4a17c8f04b8c5a44
     networks:
       caddy_default:
