--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     env_file: .env
     environment:
       WOODPECKER_SERVER: x555sj.gentoo-sargas.ts.net:9000
+    # Add to docker group to use the docker socket.
     group_add:
       - "993"
     healthcheck:
@@ -22,8 +23,6 @@ services:
         - ping
       timeout: 5s
     image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1@sha256:1b021b729048a683984f11bb55c05ce3c81475f19be1040f0fd4d46f7fbe2b12
-    # kics-scan ignore-line
-    network_mode: host
     read_only: true
     restart: always
     security_opt:
