--- a/svc/komodo-periphery/docker-compose.yml
+++ b/svc/komodo-periphery/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - no-new-privileges:true
     user: 0:0
     volumes:
-      - /srv/komodo/repos:/volumes/repos
-      - /srv/komodo/stacks:/volumes/stacks
+      - /tmp/komodo/repos:/volumes/repos
+      - /tmp/komodo/stacks:/volumes/stacks
 
   komodo-periphery:
     cap_drop:
@@ -22,16 +22,13 @@ services:
       chown-volumes:
         condition: service_completed_successfully
     environment:
-      PERIPHERY_REPO_DIR: /srv/komodo/repos
+      PERIPHERY_REPO_DIR: /tmp/komodo/repos
       # Encryption provided by tailscale.
       PERIPHERY_SSL_ENABLED: false
-      PERIPHERY_STACK_DIR: /srv/komodo/stacks
+      PERIPHERY_STACK_DIR: /tmp/komodo/stacks
     # Add to docker group to use the docker socket.
     group_add:
       - "993"
-    # Used in services like caddy, which loads different configurations based on
-    # the hostname of the server.
-    hostname: ${HOSTNAME}
     image: ghcr.io/mbecker20/periphery:1.16.6@sha256:352a2e7917dd5be0d09e50653f0d1c76f48f5272149d666ae4b8d9cdafc8de2a
     # Prevent Komodo from stopping with StopAllContainers
     labels:
@@ -46,7 +43,7 @@ services:
     user: 17746:17746
     # kics-scan ignore-block
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:z
-      - /srv/komodo/repos:/srv/komodo/repos:z
-      - /srv/komodo/stacks:/srv/komodo/stacks:z
+      - /tmp/komodo/repos:/tmp/komodo/repos:z
+      - /tmp/komodo/stacks:/tmp/komodo/stacks:z
       - /proc:/proc
+      - /var/run/docker.sock:/var/run/docker.sock:z
