--- a/svc/komodo-periphery/docker-compose.yml
+++ b/svc/komodo-periphery/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       chown-volumes:
         condition: service_completed_successfully
     environment:
+      # Gives the correct size for server disk space.
+      PERIPHERY_INCLUDE_DISK_MOUNTS: /etc/hostname
       PERIPHERY_REPO_DIR: /tmp/komodo/repos
       # Encryption provided by tailscale.
       PERIPHERY_SSL_ENABLED: false
