--- a/svc/komodo-periphery/docker-compose.yml
+++ b/svc/komodo-periphery/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       chown-volumes:
         condition: service_completed_successfully
     environment:
+      # Used to save custom changes to docker-compose files.
+      GIT_AUTHOR_EMAIL: komodo-periphery@localhost
+      GIT_AUTHOR_NAME: komodo-periphery
       # Gives the correct size for server disk space.
       PERIPHERY_INCLUDE_DISK_MOUNTS: /etc/hostname
       PERIPHERY_REPO_DIR: /tmp/komodo/repos
