--- a/svc/komodo-periphery/docker-compose.yml
+++ b/svc/komodo-periphery/docker-compose.yml
@@ -36,6 +36,9 @@ services:
     # Add to docker group to use the docker socket.
     group_add:
       - "993"
+    # Used by services like caddy that load different configs based on server
+    # hostname.
+    hostname: ${HOSTNAME}
     image: ghcr.io/mbecker20/periphery:1.16.6@sha256:352a2e7917dd5be0d09e50653f0d1c76f48f5272149d666ae4b8d9cdafc8de2a
     # Prevent Komodo from stopping with StopAllContainers
     labels:
