chore(renovate): group komodo image updates

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -27,6 +27,11 @@
       "matchPackageNames": ["ghcr.io/immich-app/*"],
       "groupSlug": "immich",
       "groupName": "immich"
+    },
+    {
+      "matchPackageNames": ["ghcr.io/mbecker20/*"],
+      "groupSlug": "komodo",
+      "groupName": "komodo"
     }
   ]
 }
