--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -6,24 +6,45 @@
 #
 # - MINIO_ROOT_USER
 # - MINIO_ROOT_PASSWORD
+#
+# TIP: In the host's /etc/fstab file mount the 4 data disks with the nofail
+# option to make the system boot even if one the data drives fails.
 
 networks:
   caddy_default:
     external: true
 
 services:
+  # kics-scan ignore-block
+  chown-volumes:
+    entrypoint:
+      - sh
+      - -c
+      - chown -R 29349:29349 /volumes/minio
+    image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
+    read_only: true
+    restart: "no"
+    security_opt:
+      - no-new-privileges:true
+    user: 0:0
+    volumes:
+      - /mnt/minio:/volumes/minio:z
+
   minio:
     cap_drop:
       - ALL
     command:
       - server
+    depends_on:
+      chown-volumes:
+        condition: service_healthy
     env_file: .env
     environment:
       - MINIO_VOLUMES=/mnt/disk1 /mnt/disk2 /mnt/disk3 /mnt/disk4
       - MINIO_STORAGE_CLASS_STANDARD=EC:1
       - MINIO_CONSOLE_ADDRESS=:9001
       - MINIO_BROWSER_REDIRECT_URL=https://minio.zarantonello.dev/minio/
-    image: quay.io/minio/minio:RELEASE.2024-10-29T16-01-48Z-cpuv1@sha256:92f77ad56d46cbf1cf53432e79170d6c42c3f4cb328bde25d1c1371e04d4807b
+    image: quay.io/minio/minio:RELEASE.2024-11-07T00-52-20Z-cpuv1@sha256:8d01c1f03e13a216995d9a064f7310a28a978a3d34dd0ed4799247842fcbdc8c
     networks:
       caddy_default:
         aliases:
@@ -34,4 +55,4 @@ services:
       - no-new-privileges:true
     user: 29349:29349
     volumes:
-      - /mnt/minio:/mnt:Z
+      - /mnt/minio:/mnt:z
