--- a/svc/vaultwarden/docker-compose.yml
+++ b/svc/vaultwarden/docker-compose.yml
@@ -13,9 +13,27 @@ networks:
     external: true
 
 services:
+  # kics-scan ignore-block
+  chown-volumes:
+    entrypoint:
+      - sh
+      - -c
+      - chown -R 53382:53382 /volumes/data
+    image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
+    read_only: true
+    restart: "no"
+    security_opt:
+      - no-new-privileges:true
+    user: 0:0
+    volumes:
+      - data:/volumes/data
+
   vaultwarden:
     cap_drop:
       - ALL
+    depends_on:
+      chown-volumes:
+        condition: service_completed_successfully
     env_file: .env
     environment:
       DOMAIN: https://vault.zarantonello.net
