--- a/.github/workflows/check-prettier.yml
+++ b/.github/workflows/check-prettier.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: npx prettier -w .
+      - run: npx prettier -w .
 
 "on":
   pull_request:
