--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,28 +1,13 @@
-# kics-scan disable=965a08d7-ef86-4f14-8792-4a3b2098937e,df746b39-6564-4fed-bf85-e9c44382303c
-FROM docker.io/oven/bun:1.1.34-slim@sha256:21fd0a62420d24ad6d0b2e2d82af4824d2fa24942f34f3bca539e07d149c5770
+# kics-scan disable=d3499f6d-1651-41bb-a9a7-de925fea487b
 
-# Configure shell.
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+FROM docker.io/library/alpine:3.20.3
 
-# Configure apt.
-ARG DEBIAN_FRONTEND="noninteractive"
-RUN rm \
-        /etc/apt/apt.conf.d/70debconf \
-        /etc/apt/apt.conf.d/docker-autoremove-suggests \
-        /etc/apt/apt.conf.d/docker-clean \
-        /etc/apt/apt.conf.d/docker-gzip-indexes && \
-    echo -e 'APT::Get::Install-Recommends "false";\nAPT::Get::Install-Suggests "false";' | tee /etc/apt/apt.conf.d/01-no-extra-pkgs
-
-# hadolint ignore=DL3008,DL3009
-RUN apt-get update && \
-    apt-get install --no-install-recommends -y \
-        ca-certificates \
-        git \
-        gpg && \
+# hadolint ignore=DL3018
+RUN apk add --no-cache git gpg && \
     git config --global core.editor code && \
-    git config --global --add safe.directory /workspaces/docker-compose-manifests
+    git config --global --add safe.directory /workspace/docker-compose-manifests
 
-HEALTHCHECK NONE
 # hadolint ignore=DL3002
-USER 0
-ENTRYPOINT ["/bin/bash"]
+USER 0:0
+ENTRYPOINT []
+HEALTHCHECK NONE
