--- a/svc/cloudflared/docker-compose.yml
+++ b/svc/cloudflared/docker-compose.yml
@@ -7,7 +7,9 @@
 # - TUNNEL_TOKEN
 
 networks:
-  default: {}
+  default:
+    driver_opts:
+      com.docker.network.bridge.enable_ip_masquerade: "false"
 
 services:
   cloudflared:
