--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -4,6 +4,10 @@
 #
 # Connect to the web interface and follow instructions from there.
 
+networks:
+  caddy_default:
+    external: true
+
 services:
   adguard:
     # kics-scan ignore-block
@@ -15,7 +19,13 @@ services:
       chown-volumes:
         condition: service_completed_successfully
     image: docker.io/adguard/adguardhome:v0.107.54@sha256:ec59d9d8d083b74620f827879bee7ad88621f96bc0c4347c84c176ffa349484c
-    network_mode: host
+    networks:
+      caddy_default:
+        aliases:
+          - adguard
+    ports:
+      - 100.106.32.89:53:53/tcp
+      - 100.106.32.89:53:53/udp
     read_only: true
     restart: always
     security_opt:
