--- a/svc/cloudflared/docker-compose.yml
+++ b/svc/cloudflared/docker-compose.yml
@@ -7,9 +7,7 @@
 # - TUNNEL_TOKEN
 
 networks:
-  default:
-    driver_opts:
-      com.docker.network.bridge.enable_ip_masquerade: "false"
+  default: {}
 
 services:
   cloudflared:
