--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -5,7 +5,7 @@
 # Connect to the web interface and follow instructions from there.
 
 networks:
-  caddy_default:
+  traefik_default:
     external: true
 
 services:
@@ -19,10 +19,12 @@ services:
       chown-volumes:
         condition: service_completed_successfully
     image: docker.io/adguard/adguardhome:v0.107.54@sha256:ec59d9d8d083b74620f827879bee7ad88621f96bc0c4347c84c176ffa349484c
+    labels:
+      traefik.enable: true
+      traefik.http.routers.adguard.rule: Host(`dns.zarantonello.dev`)
+      traefik.http.services.adguard.loadbalancer.server.port: 5300
     networks:
-      caddy_default:
-        aliases:
-          - adguard
+      - traefik_default
     ports:
       - 100.106.32.89:53:53/tcp
       - 100.106.32.89:53:53/udp
@@ -40,16 +42,15 @@ services:
     entrypoint:
       - sh
       - -c
-      - chown -R 58442:58442 /volumes/config /volumes/data
+      - chown -R 58442:58442 /var/lib/volumes/config /var/lib/volumes/data
     image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
+    network_mode: none
     read_only: true
-    restart: "no"
     security_opt:
       - no-new-privileges:true
-    user: 0:0
     volumes:
-      - config:/volumes/config
-      - data:/volumes/data
+      - config:/var/lib/volumes/config
+      - data:/var/lib/volumes/data
 
 volumes:
   config: {}
