--- a/svc/outline/docker-compose.yml
+++ b/svc/outline/docker-compose.yml
@@ -15,9 +15,8 @@
 # - UTILS_SECRET
 
 networks:
-  cloudflared_default:
+  traefik_default:
     external: true
-  default: {}
 
 services:
   # kics-scan ignore-block
@@ -25,17 +24,16 @@ services:
     entrypoint:
       - sh
       - -c
-      - chown -R 21127:21127 /volumes/data && chown -R 24056:24056 /volumes/redis && chown -R 70:70 /volumes/postgres
+      - chown -R 21127:21127 /var/lib/volumes/data && chown -R 24056:24056 /var/lib/volumes/redis && chown -R 70:70 /var/lib/volumes/postgres
     image: docker.io/library/busybox:1.37.0-musl@sha256:e95352f7c5174c96ffc684150c9d08fc3ba26ac2f37c613c398fd369e15a0789
+    network_mode: none
     read_only: true
-    restart: "no"
     security_opt:
       - no-new-privileges:true
-    user: 0:0
     volumes:
-      - data:/volumes/data
-      - redis:/volumes/redis
-      - postgres:/volumes/postgres
+      - data:/var/lib/volumes/data
+      - redis:/var/lib/volumes/redis
+      - postgres:/var/lib/volumes/postgres
 
   outline:
     cap_drop:
@@ -66,11 +64,13 @@ services:
       SMTP_PORT: 465
       URL: https://docs.zarantonello.dev
     image: docker.io/outlinewiki/outline:0.81.1@sha256:e539971b59b2523ab54bf792105d1cff6432974a37e18211c175cd053d7feb62
+    labels:
+      traefik.enable: true
+      traefik.http.routers.outline.rule: Host(`docs.zarantonello.dev`)
+      traefik.http.services.outline.loadbalancer.server.port: 3000
     networks:
-      cloudflared_default:
-        aliases:
-          - outline
-      default: {}
+      - default
+      - traefik_default
     restart: always
     security_opt:
       - no-new-privileges:true
@@ -116,8 +116,6 @@ services:
         - pg_isready
       timeout: 5s
     image: docker.io/library/postgres:17.2-alpine@sha256:e7897baa70dae1968d23d785adb4aeb699175e0bcaae44f98a7083ecb9668b93
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
@@ -146,8 +144,6 @@ services:
         - ping
       timeout: 5s
     image: docker.io/library/redis:7.4.1-alpine@sha256:c1e88455c85225310bbea54816e9c3f4b5295815e6dbf80c34d40afc6df28275
-    networks:
-      - default
     read_only: true
     restart: always
     security_opt:
